apps/media/readarr/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-readarr/#application-setup
#

apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: readarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: readarr
  type: ClusterIP
  ports:
    - name: http
      port: 8787
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: readarr
spec:
  revisionHistoryLimit: 3
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: readarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: readarr
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: sheol
      containers:
        - name: readarr
          image: ghcr.io/linuxserver/readarr:develop #  {"$imagepolicy": "media:readarr"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8787
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - name: readarr-pvc
              mountPath: /config
            - name: media-data-pvc
              mountPath: /data
      volumes:
        - name: readarr-pvc
          persistentVolumeClaim:
            claimName: readarr-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
