apps/media/readarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: readarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`readarr.powell.place`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: readarr
          port: http
